crates/sniff-test/tests/snapshots/fixtures__safe_markers.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "effect": "panic",
    "finding": "concrete-invocation",
    "function": "safe_markers::helper",
    "kind": "effect",
    "level": "deny",
    "operation": "configured-invocation",
    "owner": {
      "crate": "safe_markers",
      "scope": "workspace"
    },
    "reason": "panic invocation to `core::panicking::panic` has no recorded `// PANIC:` justification",
    "root": "safe_markers::unsafe_call",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:16:1: 16:31",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:21:5: 21:18",
    "target": "core::panicking::panic",
    "trace": [
      "src/lib.rs:17:5: 17:17: safe_markers::unsafe_call --direct-call-> safe_markers::helper",
      "src/lib.rs:21:5: 21:18: safe_markers::helper --macro-expansion-> macro core::macros::builtin::assert",
      "src/lib.rs:21:5: 21:18: macro core::macros::builtin::assert --direct-call-> core::panicking::panic"
    ],
    "trace-id": "fe797569"
  },
  {
    "effect": "panic",
    "finding": "concrete-operation",
    "function": "safe_markers::unsafe_ratio",
    "kind": "effect",
    "level": "deny",
    "operation": "division-by-zero",
    "owner": {
      "crate": "safe_markers",
      "scope": "workspace"
    },
    "reason": "division by zero has no recorded `// PANIC:` justification",
    "root": "safe_markers::unsafe_ratio",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:7:1: 7:63",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:8:5: 8:24",
    "trace": [
      "src/lib.rs:8:5: 8:24: safe_markers::unsafe_ratio --effect-operation-> division by zero"
    ],
    "trace-id": "9451dc4d"
  }
]
