crates/sniff-test/tests/snapshots/fixtures__safety_callable_sites.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "function": "safety_callable_sites::independently_marked_calls",
    "kind": "unsafe-call-missing-justification",
    "level": "warn",
    "owner": {
      "crate": "safety_callable_sites",
      "package-name": "safety-callable-sites",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "unsafe call to `unsafe function pointer` has no recorded `// SAFETY:` evidence",
    "root": "safety_callable_sites::independently_marked_calls",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:15:1: 15:36",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:23:14: 23:22",
    "target": "unsafe function pointer",
    "trace": [
      "src/lib.rs:23:14: 23:22: safety_callable_sites::independently_marked_calls --indirect-call-> indirect call through an unsafe function pointer"
    ]
  }
]
