crates/sniff-test/tests/snapshots/fixtures__safety_macro_ignores_are_path_local.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "kind": "documented-panic",
    "level": "warn",
    "owner": {
      "crate": "safety_macro_ignores",
      "package-name": "safety-macro-ignores",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "call to `alloc::macros::format` with a `# Panics` obligation has no recorded `// PANIC:` justification",
    "root": "safety_macro_ignores::format_and_dereference",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:3:1: 3:42",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:6:13: 6:31",
    "target": "alloc::macros::format",
    "trace": [
      "src/lib.rs:6:13: 6:31: safety_macro_ignores::format_and_dereference --macro-expansion-> alloc::macros::format"
    ]
  },
  {
    "function": "safety_macro_ignores::format_and_dereference",
    "kind": "unsafe-op-missing-justification",
    "level": "deny",
    "owner": {
      "crate": "safety_macro_ignores",
      "package-name": "safety-macro-ignores",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "unsafe operation (raw pointer dereference) has no recorded `// SAFETY:` justification",
    "root": "safety_macro_ignores::format_and_dereference",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:3:1: 3:42",
    "safety-op-kind": "raw-pointer-dereference",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:10:17: 10:25",
    "trace": [
      "src/lib.rs:10:17: 10:25: safety_macro_ignores::format_and_dereference --unsafe-operation-> unsafe operation (raw pointer dereference)"
    ]
  }
]
