crates/sniff-test/tests/snapshots/fixtures__safety_node_limit.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "safety_node_limit"
    },
    "dependencies": [],
    "findings": [
      {
        "kind": "safety-analysis-incomplete",
        "level": "deny",
        "reason": "safety analysis reached the configured node limit (2)",
        "root": "safety_node_limit::root",
        "root-kind": "concrete"
      }
    ],
    "format-version": 11,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "tool-version": "0.1.0"
  }
]
