crates/sniff-test/tests/snapshots/fixtures__safety_obligations.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "function": "safety_obligations::misses_requirement",
    "kind": "safety-obligation-missing-requirements",
    "level": "warn",
    "missing-requirements": [
      "valid_ptr: pointer must be non-null."
    ],
    "reason": "safety-obligation call to `safety_obligations::documented_contract` does not satisfy all # Safety requirements",
    "requirements": [
      "valid_ptr: pointer must be non-null."
    ],
    "root": "safety_obligations::misses_requirement",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:16:1: 16:28",
    "span": "src/lib.rs:18:5: 18:41",
    "target": "safety_obligations::documented_contract",
    "trace": [
      "src/lib.rs:18:5: 18:41: safety_obligations::misses_requirement --direct-call-> safety_obligations::documented_contract"
    ]
  }
]
