crates/sniff-test/tests/snapshots/fixtures__safety_requirements.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "analysis-findings": [],
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "safety_requirements",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": "[FIXTURE]/Cargo.toml",
      "metadata": "[METADATA]",
      "package-name": "safety-requirements",
      "package-version": "0.1.0",
      "target": null
    },
    "concrete-roots": 0,
    "counts": {
      "analysis-incomplete": 0,
      "cached-dependency-panics": 0,
      "compiler-asserts": 0,
      "documented-panics": 0,
      "indirect-call-boundaries": 0,
      "panic-invocations": 0,
      "trusted-panics": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 2,
    "generic-roots": 0,
    "reason": "sniff-test-artifact",
    "roots": [],
    "rustc-version": "[RUSTC_VERSION]",
    "safety": {
      "counts": {
        "missing-safety-docs": 1,
        "safety-obligation-missing-justification": 0,
        "safety-obligation-missing-requirements": 0,
        "unsafe-call-missing-justification": 2,
        "unsafe-call-missing-requirements": 3,
        "unsafe-op-missing-justification": 0
      },
      "findings": [
        {
          "function": "safety_requirements::undocumented_public",
          "kind": "missing-safety-docs",
          "level": "warn",
          "reason": "public unsafe function `safety_requirements::undocumented_public` is missing # Safety docs",
          "span": "src/lib.rs:33:1: 33:57",
          "target": null
        },
        {
          "function": "safety_requirements::missing_requirement",
          "kind": "unsafe-call-missing-requirements",
          "level": "warn",
          "missing-requirements": [
            "initialized: pointer must reference initialized memory."
          ],
          "reason": "unsafe call to `safety_requirements::read_byte` does not satisfy all # Safety requirements",
          "span": "src/lib.rs:75:14: 75:37",
          "target": "safety_requirements::read_byte"
        },
        {
          "function": "safety_requirements::safety_marker_boundary_missing_requirements",
          "kind": "unsafe-call-missing-requirements",
          "level": "warn",
          "missing-requirements": [
            "valid_ptr: pointer must be non-null.",
            "initialized: pointer must reference initialized memory."
          ],
          "reason": "unsafe call to `safety_requirements::read_byte` does not satisfy all # Safety requirements",
          "span": "src/lib.rs:86:14: 86:37",
          "target": "safety_requirements::read_byte"
        },
        {
          "function": "safety_requirements::missing_justification",
          "kind": "unsafe-call-missing-justification",
          "level": "warn",
          "reason": "unsafe call to `safety_requirements::private_unsafe_no_docs` has no `// SAFETY:` justification",
          "span": "src/lib.rs:90:14: 90:38",
          "target": "safety_requirements::private_unsafe_no_docs"
        },
        {
          "function": "safety_requirements::unsafe_fn_pointer_missing_justification",
          "kind": "unsafe-call-missing-justification",
          "level": "warn",
          "reason": "unsafe call to `unsafe function pointer` has no `// SAFETY:` justification",
          "span": "src/lib.rs:103:14: 103:24",
          "target": "unsafe function pointer"
        },
        {
          "function": "safety_requirements::generic_unsafe_trait_method_missing",
          "kind": "unsafe-call-missing-requirements",
          "level": "warn",
          "missing-requirements": [
            "valid_ptr: pointer must be non-null."
          ],
          "reason": "unsafe call to `safety_requirements::UnsafeGreeter::greet` does not satisfy all # Safety requirements",
          "span": "src/lib.rs:139:14: 139:32",
          "target": "safety_requirements::UnsafeGreeter::greet"
        }
      ]
    },
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
