crates/sniff-test/tests/snapshots/fixtures__safety_requirements_call_sites.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "safety_requirements"
    },
    "dependencies": [],
    "findings": [
      {
        "function": "safety_requirements::unknown_unsafe_fn_pointer",
        "kind": "unsafe-call-missing-justification",
        "level": "warn",
        "reason": "unsafe call to `unsafe function pointer` has no `// SAFETY:` justification",
        "root": "safety_requirements::unknown_unsafe_fn_pointer",
        "root-kind": "concrete",
        "span": "src/lib.rs:194:14: 194:24",
        "target": "unsafe function pointer",
        "trace": [
          "src/lib.rs:194:14: 194:24: safety_requirements::unknown_unsafe_fn_pointer --indirect-call-> indirect call Binder { value: unsafe fn(), bound_vars: [] }"
        ]
      },
      {
        "function": "safety_requirements::unsafe_fn_pointer_named_requirement_missing",
        "kind": "unsafe-call-missing-requirements",
        "level": "warn",
        "missing-requirements": [
          "ready: the caller must establish the target-specific precondition."
        ],
        "reason": "unsafe call to `safety_requirements::documented_pointer_target` does not satisfy all # Safety requirements",
        "requirements": [
          "ready: the caller must establish the target-specific precondition."
        ],
        "root": "safety_requirements::unsafe_fn_pointer_named_requirement_missing",
        "root-kind": "concrete",
        "span": "src/lib.rs:190:14: 190:24",
        "target": "safety_requirements::documented_pointer_target",
        "trace": [
          "src/lib.rs:190:14: 190:24: safety_requirements::unsafe_fn_pointer_named_requirement_missing --fn-pointer-call-target-> safety_requirements::documented_pointer_target"
        ]
      }
    ],
    "format-version": 11,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "tool-version": "0.1.0"
  }
]
