crates/sniff-test/tests/snapshots/fixtures__safety_requirements_denied_rerun.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: second_messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "safety_requirements"
    },
    "dependencies": [],
    "findings": [
      {
        "function": "safety_requirements::configured_safety_obligation_missing_requirement",
        "kind": "safety-obligation-missing-requirements",
        "level": "deny",
        "missing-requirements": [
          "valid_ptr: pointer must be non-null."
        ],
        "reason": "safety-obligation call to `safety_requirements::safe_documented_contract` does not satisfy all # Safety requirements",
        "root": "safety_requirements::configured_safety_obligation_missing_requirement",
        "root-kind": "concrete",
        "span": "src/lib.rs:164:5: 164:34",
        "target": "safety_requirements::safe_documented_contract"
      },
      {
        "function": "safety_requirements::generic_unsafe_trait_method_missing",
        "kind": "unsafe-call-missing-requirements",
        "level": "deny",
        "missing-requirements": [
          "valid_ptr: pointer must be non-null."
        ],
        "reason": "unsafe call to `safety_requirements::UnsafeGreeter::greet` does not satisfy all # Safety requirements",
        "root": "safety_requirements::generic_unsafe_trait_method_missing",
        "root-kind": "generic",
        "span": "src/lib.rs:139:14: 139:32",
        "target": "safety_requirements::UnsafeGreeter::greet"
      },
      {
        "function": "safety_requirements::missing_justification",
        "kind": "unsafe-call-missing-justification",
        "level": "warn",
        "reason": "unsafe call to `safety_requirements::private_unsafe_no_docs` has no `// SAFETY:` justification",
        "root": "safety_requirements::missing_justification",
        "root-kind": "concrete",
        "span": "src/lib.rs:90:14: 90:38",
        "target": "safety_requirements::private_unsafe_no_docs"
      },
      {
        "function": "safety_requirements::missing_requirement",
        "kind": "unsafe-call-missing-requirements",
        "level": "deny",
        "missing-requirements": [
          "initialized: pointer must reference initialized memory."
        ],
        "reason": "unsafe call to `safety_requirements::read_byte` does not satisfy all # Safety requirements",
        "root": "safety_requirements::missing_requirement",
        "root-kind": "concrete",
        "span": "src/lib.rs:75:14: 75:37",
        "target": "safety_requirements::read_byte"
      },
      {
        "function": "safety_requirements::safety_marker_boundary_missing_requirements",
        "kind": "unsafe-call-missing-requirements",
        "level": "deny",
        "missing-requirements": [
          "valid_ptr: pointer must be non-null.",
          "initialized: pointer must reference initialized memory."
        ],
        "reason": "unsafe call to `safety_requirements::read_byte` does not satisfy all # Safety requirements",
        "root": "safety_requirements::safety_marker_boundary_missing_requirements",
        "root-kind": "concrete",
        "span": "src/lib.rs:86:14: 86:37",
        "target": "safety_requirements::read_byte"
      },
      {
        "function": "safety_requirements::undocumented_public",
        "kind": "missing-safety-docs",
        "level": "warn",
        "reason": "public unsafe function `safety_requirements::undocumented_public` is missing # Safety docs",
        "root": "safety_requirements::undocumented_public",
        "root-kind": "concrete",
        "span": "src/lib.rs:33:1: 33:57"
      },
      {
        "function": "safety_requirements::unsafe_fn_pointer_missing_justification",
        "kind": "unsafe-call-missing-justification",
        "level": "warn",
        "reason": "unsafe call to `unsafe function pointer` has no `// SAFETY:` justification",
        "root": "safety_requirements::unsafe_fn_pointer_missing_justification",
        "root-kind": "concrete",
        "span": "src/lib.rs:103:14: 103:24",
        "target": "unsafe function pointer"
      }
    ],
    "format-version": 9,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
