crates/sniff-test/tests/snapshots/fixtures__safety_requirements_ignored.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "safety_requirements"
    },
    "dependencies": [],
    "findings": [
      {
        "function": "safety_requirements::configured_safety_obligation_missing_requirement",
        "kind": "safety-obligation-missing-requirements",
        "level": "warn",
        "missing-requirements": [
          "valid_ptr: pointer must be non-null."
        ],
        "reason": "safety-obligation call to `safety_requirements::safe_documented_contract` does not satisfy all # Safety requirements",
        "root": "safety_requirements::configured_safety_obligation_missing_requirement",
        "root-kind": "concrete",
        "span": "src/lib.rs:164:5: 164:34",
        "target": "safety_requirements::safe_documented_contract"
      },
      {
        "function": "safety_requirements::generic_unsafe_trait_method_missing",
        "kind": "unsafe-call-missing-requirements",
        "level": "warn",
        "missing-requirements": [
          "valid_ptr: pointer must be non-null."
        ],
        "reason": "unsafe call to `safety_requirements::UnsafeGreeter::greet` does not satisfy all # Safety requirements",
        "root": "safety_requirements::generic_unsafe_trait_method_missing",
        "root-kind": "generic",
        "span": "src/lib.rs:139:14: 139:32",
        "target": "safety_requirements::UnsafeGreeter::greet"
      },
      {
        "function": "safety_requirements::unsafe_fn_pointer_missing_justification",
        "kind": "unsafe-call-missing-justification",
        "level": "warn",
        "reason": "unsafe call to `unsafe function pointer` has no `// SAFETY:` justification",
        "root": "safety_requirements::unsafe_fn_pointer_missing_justification",
        "root-kind": "concrete",
        "span": "src/lib.rs:103:14: 103:24",
        "target": "unsafe function pointer"
      }
    ],
    "format-version": 10,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
